[project]
name = "fine-tuning-llm-sandbox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=0.24.0",
    "bitsandbytes>=0.41.0",
    "datasets>=2.14.0",
    "fastapi>=0.104.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "peft>=0.7.0",
    "protobuf>=3.20.0",
    "pydantic>=2.4.0",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.6",
    "requests>=2.31.0",
    "scipy>=1.10.0",
    "sentencepiece>=0.1.99",
    "streamlit>=1.50.0",
    "torch>=2.0.0",
    "tqdm>=4.65.0",
    "transformers>=4.35.0",
    "trl>=0.7.0",
    "uvicorn[standard]>=0.24.0",
    "wandb>=0.15.0",
]
